Added support for migrating Plesk 9 backups, which have a different format to Plesk 7 and 8.
Allowed script installers can now be set at the plan level and on the Edit Owner Limits page. They can also be set on the command line with create-plan, modify-plan and modify-limits commands.
Added the --plan flag to the create-reseller API command, to copy limits from a plan.
Link script names to their home pages.
Added option to not add MX records for secondary mail servers.
Added an option on the Batch Create Users page to generate passwords randomly, and a --random-pass flag to create-user.pl.
Added a Module Config option to disallow switching to Usermin as a mailbox user by domain owners.
Overall network traffic is now collected regularly, and can be displayed on the System Statistics page.
---- Changes since 3.67 ----
Updated the phpMyAdmin script installer to versions 3.1.3.1 and 2.11.9.5, OpenGoo to 1.3.1, Joomla to 1.5.10, Mantis to 1.1.6, Typo to 5.3, Django to 1.0.2, Zenphoto to 1.2.4, Twiki to 4.3.0, Bugzilla to 3.2.3, Magento to 1.3.0, OpenX to 2.8.0, PHPCoin to 1.6.0, PiWiki to 0.2.33, and Trac to 0.11.4.
Updated the Forwards, Passwd, Chora, Vacation and Gollem scripts from the Horde family to their latest versions.
Global template variables are now also available to pre- and post-domain creation commands, with the GLOBAL_ prefix.
Added the SSH server status to the System Information page, including the ability to stop and start it.
Made the docutils Python module optional for MoinMoin installs, as it is missing on CentOS.
Added a --plan flag to modify-reseller.pl, to allow setting of limits from a plan.
Added a Module Config option to control if default features come from plan or Features and Plugins page.
Greylisting using Postgrey can now be setup using Virtualmin, via the new Email Greylisting page. In addition, whitelists for SMTP servers and email recipents can be managed.